[gd_scene load_steps=3 format=3 uid="uid://of55w5nk6rnu"]

[ext_resource type="Script" uid="uid://dj741o7ag76cu" path="res://Scripts/UI/player_action_panel.gd" id="1_14yrx"]
[ext_resource type="PackedScene" uid="uid://bbp0som1xstur" path="res://Scenes/AbilityButton.tscn" id="2_g7jcn"]

[node name="PlayerActionPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_14yrx")
ability_button_scene = ExtResource("2_g7jcn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 120.0

[node name="Buttons_Container" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 163.0
offset_right = 243.0
offset_bottom = 120.0

[node name="Buttons_Skills_Container" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 314.0
offset_right = 394.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="ColorRect3/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="PauseButton" type="Button" parent="ColorRect3/VBoxContainer"]
layout_mode = 2
text = "Pause"
